# 10384_QI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
exercises/: week01.ipynb  week02.ipynb  week05.ipynb  week06.ipynb  week07.ipynb  week08.ipynb
papers/: notes.md
utils/: __init__.py  bloch_plotly.py  prettyprint_qutip.py
