[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qi"
version = "0.1.0"
description = "Quantum Information exercises and utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "plotly>=6.3.0",
    "qutip>=5.2.1",
    "setuptools>=80.9.0"
]
packages = ["utils"]
